add test and cleanup code (#26)
* add test and cleanup code

* add test and cleanup code

* add test and cleanup code

* add test and cleanup code

* add test and cleanup code

* add test and cleanup code

* add more tests

* add more tests

* add more tests

* add more tests

* mend

* mend